# OptiMovesLib

./: .gitignore  .gitmodules  CMakeLists.txt  OptiMoves.sln  OptiMoves.vcxproj  OptiMoves.vcxproj.filters  bindings-linux.sh  bindings-win64.bat  build-linux.sh  build-win64.bat  full-win64.bat
.old/: CMakeLists.txt  CMakeSettings.json
godot-cpp/: SConstruct
src/: init.cpp  optimoves.cpp  optimoves.hpp  patchreloader.cpp  patchreloader.hpp
